--- a/idefix-config.glade
+++ b/idefix-config.glade
@@ -392,7 +392,7 @@
   <object class="GtkImage" id="image3">
     <property name="visible">True</property>
     <property name="can_focus">False</property>
-    <property name="pixbuf">data\assistant-32.png</property>
+    <property name="stock">gtk-missing-image</property>
   </object>
   <object class="GtkMenu" id="profile_context_menu">
     <property name="visible">True</property>
@@ -844,33 +844,6 @@
                 <property name="top_attach">0</property>
               </packing>
             </child>
-            <child>
-              <placeholder/>
-            </child>
-            <child>
-              <placeholder/>
-            </child>
-            <child>
-              <placeholder/>
-            </child>
-            <child>
-              <placeholder/>
-            </child>
-            <child>
-              <placeholder/>
-            </child>
-            <child>
-              <placeholder/>
-            </child>
-            <child>
-              <placeholder/>
-            </child>
-            <child>
-              <placeholder/>
-            </child>
-            <child>
-              <placeholder/>
-            </child>
           </object>
           <packing>
             <property name="left_attach">1</property>
@@ -1311,7 +1284,7 @@
                 <property name="can_focus">False</property>
                 <child>
                   <object class="GtkVBox" id="vbox3">
-                    <property name="width_request">3</property>
+                    <property name="width_request">350</property>
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <child>
@@ -1337,51 +1310,83 @@
                       </packing>
                     </child>
                     <child>
-                      <object class="GtkToolbar" id="toolbar1">
+                      <object class="GtkBox">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
-                        <property name="toolbar_style">icons</property>
                         <child>
-                          <object class="GtkToolButton" id="toolbutton4">
-                            <property name="visible">True</property>
-                            <property name="can_focus">False</property>
-                            <property name="tooltip_text" translatable="yes">Save configuration on the server</property>
+                          <object class="GtkButton">
                             <property name="label" translatable="yes">SAVE</property>
-                            <property name="use_underline">True</property>
+                            <property name="visible">True</property>
+                            <property name="can_focus">True</property>
+                            <property name="receives_default">True</property>
                             <signal name="clicked" handler="build_files" swapped="no"/>
                           </object>
                           <packing>
                             <property name="expand">True</property>
-                            <property name="homogeneous">True</property>
+                            <property name="fill">True</property>
+                            <property name="position">0</property>
                           </packing>
                         </child>
                         <child>
-                          <object class="GtkToolButton" id="toolbutton1">
+                          <object class="GtkButton">
                             <property name="visible">True</property>
-                            <property name="can_focus">False</property>
-                            <property name="tooltip_text" translatable="yes">Assistant</property>
-                            <property name="use_underline">True</property>
-                            <property name="icon_widget">image3</property>
+                            <property name="can_focus">True</property>
+                            <property name="receives_default">True</property>
                             <signal name="clicked" handler="show_assistant" swapped="no"/>
+                            <child>
+                              <object class="GtkImage" id="image4">
+                                <property name="visible">True</property>
+                                <property name="can_focus">False</property>
+                                <property name="pixbuf">data\assistant-32.png</property>
+                              </object>
+                            </child>
                           </object>
                           <packing>
                             <property name="expand">False</property>
-                            <property name="homogeneous">True</property>
+                            <property name="fill">False</property>
+                            <property name="position">1</property>
                           </packing>
                         </child>
                         <child>
-                          <object class="GtkToggleToolButton" id="toolbutton3">
+                          <object class="GtkToggleButton">
                             <property name="visible">True</property>
-                            <property name="can_focus">False</property>
-                            <property name="tooltip_text" translatable="yes">Expand or collapse the tree view</property>
-                            <property name="label" translatable="yes">toolbutton3</property>
-                            <property name="use_underline">True</property>
-                            <property name="stock_id">gtk-indent</property>
+                            <property name="can_focus">True</property>
+                            <property name="receives_default">True</property>
+                            <property name="always_show_image">True</property>
                             <signal name="toggled" handler="treeview_expand" swapped="no"/>
+                            <child>
+                              <object class="GtkImage">
+                                <property name="visible">True</property>
+                                <property name="can_focus">False</property>
+                                <property name="stock">gtk-indent</property>
+                                <property name="icon_size">3</property>
+                              </object>
+                            </child>
                           </object>
                           <packing>
                             <property name="expand">False</property>
-                            <property name="homogeneous">True</property>
+                            <property name="fill">True</property>
+                            <property name="position">2</property>
+                          </packing>
+                        </child>
+                        <child>
+                          <object class="GtkButton">
+                            <property name="visible">True</property>
+                            <property name="can_focus">True</property>
+                            <property name="receives_default">True</property>
+                            <child>
+                              <object class="GtkImage">
+                                <property name="visible">True</property>
+                                <property name="can_focus">False</property>
+                                <property name="stock">gtk-dialog-question</property>
+                                <property name="icon_size">3</property>
+                              </object>
+                            </child>
+                          </object>
+                          <packing>
+                            <property name="expand">False</property>
+                            <property name="fill">True</property>
+                            <property name="position">3</property>
                           </packing>
                         </child>
                       </object>
@@ -1400,7 +1405,7 @@
                 </child>
                 <child>
                   <object class="GtkStack" id="users_stack">
-                    <property name="width_request">2</property>
+                    <property name="width_request">250</property>
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <child>
@@ -1505,9 +1510,10 @@
                                           <object class="GtkEntry" id="users_time_to_email">
                                             <property name="visible">True</property>
                                             <property name="can_focus">True</property>
-                                            <property name="max_length">5</property>
+                                            <property name="max_length">2</property>
                                             <property name="invisible_char">●</property>
-                                            <property name="width_chars">0</property>
+                                            <property name="width_chars">2</property>
+                                            <property name="max_width_chars">2</property>
                                             <signal name="key-release-event" handler="update_time" swapped="no"/>
                                           </object>
                                           <packing>
@@ -1536,9 +1542,10 @@
                                           <object class="GtkEntry" id="users_time_from_email">
                                             <property name="visible">True</property>
                                             <property name="can_focus">True</property>
-                                            <property name="max_length">5</property>
+                                            <property name="max_length">2</property>
                                             <property name="invisible_char">●</property>
-                                            <property name="width_chars">0</property>
+                                            <property name="width_chars">2</property>
+                                            <property name="max_width_chars">2</property>
                                             <signal name="key-release-event" handler="update_time" swapped="no"/>
                                           </object>
                                           <packing>
@@ -1966,7 +1973,8 @@ Eg: 123 (Monday, Tuesday, Wednesday)</property>
                                   <object class="GtkLabel">
                                     <property name="visible">True</property>
                                     <property name="can_focus">False</property>
-                                    <property name="label" translatable="yes">  Right click a line, or switch to the Internet Filter tab to edit  </property>
+                                    <property name="label" translatable="yes">  Right click a line to edit  </property>
+                                    <property name="wrap">True</property>
                                     <attributes>
                                       <attribute name="weight" value="bold"/>
                                       <attribute name="foreground" value="#2e2e34343636"/>
@@ -2009,9 +2017,6 @@ Eg: 123 (Monday, Tuesday, Wednesday)</property>
                     <property name="fill">True</property>
                     <property name="position">1</property>
                   </packing>
-                </child>
-                <child>
-                  <placeholder/>
                 </child>
               </object>
               <packing>
@@ -2310,8 +2315,8 @@ to all users</property>
                                     </child>
                                   </object>
                                   <packing>
-                                    <property name="expand">True</property>
-                                    <property name="fill">True</property>
+                                    <property name="expand">False</property>
+                                    <property name="fill">False</property>
                                     <property name="position">0</property>
                                   </packing>
                                 </child>
@@ -2477,7 +2482,7 @@ to all users</property>
                                   </object>
                                   <packing>
                                     <property name="expand">False</property>
-                                    <property name="fill">True</property>
+                                    <property name="fill">False</property>
                                     <property name="position">0</property>
                                   </packing>
                                 </child>
@@ -2613,7 +2618,7 @@ allowed</property>
                                 </child>
                               </object>
                               <packing>
-                                <property name="expand">True</property>
+                                <property name="expand">False</property>
                                 <property name="fill">True</property>
                                 <property name="position">0</property>
                               </packing>
